5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1838_1274.log
== TEST (2019-06-26 13:16:30) 
-- CODE:
from numpy import*

a = int(input("digite: "))
b = ones((a, a), dtype = int)
i = 1
j = 2

for k in range(1, a):
	while (i < a):
		b[k, i] = k + 1
		i += 1
	i = j
	j += 1

k = 1
j = 2

for i in range(1, n):
	while(k < a):
		b[k, i] = i + 1
		k = j
		k += 1
		
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:16:35) 
-- CODE:
from numpy import*

a = int(input("digite: "))
b = ones((a, a), dtype = int)
i = 1
j = 2

for k in range(1, a):
	while (i < a):
		b[k, i] = k + 1
		i += 1
	i = j
	j += 1

k = 1
j = 2

for i in range(1, n):
	while(k < a):
		b[k, i] = i + 1
		k = j
		k += 1
		
print(b)
-- EXECUTION TIME:
1.01423
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 18, in <module>
    for i in range(1, n):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:18:53) 
-- CODE:
from numpy import*

a = int(input("digite: "))
b = ones((a, a), dtype = int)
i = 1
j = 2

for k in range(1, a):
	while (i < a):
		b[k, i] = k + 1
		i += 1
	i = j
	j += 1

k = 1
j = 2

for i in range(1, a):
	while(k < a):
		b[k, i] = i + 1
		k = j
		k += 1
		
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:19:22) 
-- CODE:
from numpy import*

a = int(input("digite: "))
b = ones((a, a), dtype = int)
i = 1
j = 2

for k in range(1, a):
	while (i < a):
		b[k, i] = k + 1
		i += 1
	i = j
	j += 1

k = 1
j = 2

for i in range(1, a):
	while(k < a):
		b[k, i] = i + 1
		k = j
		k += 1
		
print(b)
-- EXECUTION TIME:
1.15812
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 1 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:

-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:19:22) 
-- CODE:
from numpy import*

a = int(input("digite: "))
b = ones((a, a), dtype = int)
i = 1
j = 2

for k in range(1, a):
	while (i < a):
		b[k, i] = k + 1
		i += 1
	i = j
	j += 1

k = 1
j = 2

for i in range(1, a):
	while(k < a):
		b[k, i] = i + 1
		k = j
		k += 1
		
print(b)
-- EXECUTION TIME:
3.16426
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
digite: [[1 1 1]
 [1 2 2]
 [1 1 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
digite:
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:19:22) 
-- CODE:
from numpy import*

a = int(input("digite: "))
b = ones((a, a), dtype = int)
i = 1
j = 2

for k in range(1, a):
	while (i < a):
		b[k, i] = k + 1
		i += 1
	i = j
	j += 1

k = 1
j = 2

for i in range(1, a):
	while(k < a):
		b[k, i] = i + 1
		k = j
		k += 1
		
print(b)
-- EXECUTION TIME:
4.941
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 1 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:

-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:22:07) 
-- CODE:
from numpy import *

n = int(input())
m = ones((n, n), dtype = int)
j = 1
k = 2

for i in range(1,n):
	while(j < n):
		m[i, j] = i + 1
		j += 1
	j = k
	k += 1
	
i = 1
k = 2
for j in range(1, n):
	while(i < n):
		m[i, j] = j + 1
		i += 1
	i = k
	k += 1

print(m)
-- EXECUTION TIME:
0.893578
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
